--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,17 @@ body {
 .header {
   display: grid;
   grid-template-columns: 1fr;
-  align-items: center;
+  align-items: stretch;
   background-color: cadetblue;
 }
 
 .title {
   padding: 50px 25px;
   text-align: center;
+  /* adds flex to vertically align the text so that its more visible on desktop */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 h1 {
@@ -29,10 +33,16 @@ h4 {
   font-weight: 300;
 }
 
-img {
+picture, 
+picture img{
+  width: 100%;
+  height: 100%;
   display: block;
 }
 
+picture img{
+  object-fit: cover;
+}
 @media (min-width: 960px) {
   .header {
     grid-template-columns: repeat(2, 1fr);
