--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 .header {
   display: grid;
   grid-template-columns: 1fr;
+  /* adds stretch so that both the title and the image fill the height of the header row, so that they're equal height with the desktop version */
   align-items: stretch;
   background-color: cadetblue;
 }
@@ -31,6 +32,8 @@ h1 {
 h4 {
   font-size: 1.5rem;
   font-weight: 300;
+  /* adds margin on top so that it looks less squished to the top */
+  margin-top: 1rem;
 }
 
 /* removed single img tag and added picture to ensure that the picture and img fill their grid area */
